--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
             <div class="dash">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <div class="box box box-1"></div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <div class="box box-2"></div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <div class="box box box-3"></div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <div class="box box box-4"></div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-12">
                             <div class="box box-1"></div>
                         </div>
                     </div>
@@ -125,9 +125,6 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/fontawesome.min.js"></script>
         <script src="js/main.js"></script>
-        <script type="text/javascript">
-        
-
-        </script>
+        <script type="text/javascript"></script>
     </body>
 </html>
