--- a/index.html
+++ b/index.html
@@ -72,12 +72,20 @@
                         <i class="arrow"></i>
                     </li>
                 </ul>
+                <div class="btn-theme">
+                            <input type="checkbox"  name="theme_switch" class="checkbox" id="switch">
+                            <label for="checkbox" class="label">
+                            <i class='fas fa-sun'></i>
+                            <i class="fas fa-moon"></i>
+                            <div class='ball'>
+                            </label>
+                </div>
             </div>
         </aside>
         <div class="main">
             <div class="navbar">
                 <div class="container">
-                    <input type="checkbox" name="theme_switch" id="switch">
+                    <!-- <input type="checkbox" name="theme_switch" id="switch"> -->
                     <div class="search">
                         <i class="fas fa-search icon-search"></i>
                         <input type="search" name="" id="" placeholder="Search Here....">
@@ -99,6 +107,8 @@
                     </div>
                 </div>
             </div>
+
+
             <div class="dash">
                 <div class="container">
                     <div class="row">
@@ -122,6 +132,8 @@
             </div>
 
         </div>
+
+
         <script src="js/bootstrap.min.js"></script>
         <script src="js/fontawesome.min.js"></script>
         <script src="js/main.js"></script>
